<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseDetail" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/CName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/course_detail_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
			android:ellipsize="marquee"
			android:fadingEdge="horizontal"
    		android:lines="1"
    		android:marqueeRepeatLimit="marquee_forever"
    		android:scrollHorizontally="true" />

        <TextView
            android:id="@+id/section_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/course_detail_prereqs"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/section_prereq_full"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:text="@string/course_detail_prereq_full"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sectionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/course_detail_section_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/sectionlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</RelativeLayout>